prediction fastapi dockerpush

--- a/research/05_Model_evaluation.ipynb
+++ b/research/05_Model_evaluation.ipynb
@@ -111,7 +111,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "id": "e3a32d5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.Name: datasets\n",
+      "Version: 3.6.0\n",
+      "Summary: HuggingFace community-driven open-source library of datasets\n",
+      "Home-page: https://github.com/huggingface/datasets\n",
+      "Author: HuggingFace Inc.\n",
+      "Author-email: thomas@huggingface.co\n",
+      "License: Apache 2.0\n",
+      "Location: c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages\n",
+      "Requires: dill, filelock, fsspec, huggingface-hub, multiprocess, numpy, packaging, pandas, pyarrow, pyyaml, requests, tqdm, xxhash\n",
+      "Required-by: \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip show datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1c1e1628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.Collecting evaluate\n",
+      "  Downloading evaluate-0.4.3-py3-none-any.whl.metadata (9.2 kB)\n",
+      "Requirement already satisfied: datasets>=2.0.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (3.6.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (2.0.2)\n",
+      "Requirement already satisfied: dill in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (0.3.8)\n",
+      "Requirement already satisfied: pandas in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (2.2.3)\n",
+      "Requirement already satisfied: requests>=2.19.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (2.32.3)\n",
+      "Requirement already satisfied: tqdm>=4.62.1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (4.67.1)\n",
+      "Requirement already satisfied: xxhash in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (3.5.0)\n",
+      "Requirement already satisfied: multiprocess in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (0.70.16)\n",
+      "Requirement already satisfied: fsspec>=2021.05.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from fsspec[http]>=2021.05.0->evaluate) (2025.3.0)\n",
+      "Requirement already satisfied: huggingface-hub>=0.7.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (0.32.3)\n",
+      "Requirement already satisfied: packaging in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from evaluate) (25.0)\n",
+      "Requirement already satisfied: filelock in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from datasets>=2.0.0->evaluate) (3.18.0)\n",
+      "Requirement already satisfied: pyarrow>=15.0.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from datasets>=2.0.0->evaluate) (20.0.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from datasets>=2.0.0->evaluate) (6.0.2)\n",
+      "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from fsspec[http]>=2021.05.0->evaluate) (3.12.4)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (2.6.1)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (1.3.2)\n",
+      "Requirement already satisfied: async-timeout<6.0,>=4.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (5.0.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (25.3.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (1.6.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (6.4.4)\n",
+      "Requirement already satisfied: propcache>=0.2.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (0.3.1)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.17.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (1.20.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.1.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from multidict<7.0,>=4.5->aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (4.13.2)\n",
+      "Requirement already satisfied: idna>=2.0 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from yarl<2.0,>=1.17.0->aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]>=2021.05.0->evaluate) (3.10)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from requests>=2.19.0->evaluate) (3.4.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from requests>=2.19.0->evaluate) (1.26.20)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from requests>=2.19.0->evaluate) (2025.4.26)\n",
+      "Requirement already satisfied: colorama in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from tqdm>=4.62.1->evaluate) (0.4.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from pandas->evaluate) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from pandas->evaluate) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from pandas->evaluate) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\admin\\anaconda3\\envs\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas->evaluate) (1.17.0)\n",
+      "Downloading evaluate-0.4.3-py3-none-any.whl (84 kB)\n",
+      "Installing collected packages: evaluate\n",
+      "Successfully installed evaluate-0.4.3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install evaluate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "924c17a9",
    "metadata": {},
    "outputs": [
@@ -122,22 +206,12 @@
       "c:\\Users\\ADMIN\\anaconda3\\envs\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'load_metric' from 'datasets' (c:\\Users\\ADMIN\\anaconda3\\envs\\venv\\lib\\site-packages\\datasets\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AutoModelForSeq2SeqLM, AutoTokenizer\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dataset, load_from_disk, load_metric\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'load_metric' from 'datasets' (c:\\Users\\ADMIN\\anaconda3\\envs\\venv\\lib\\site-packages\\datasets\\__init__.py)"
-     ]
     }
    ],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-    "from datasets import load_dataset, load_from_disk, load_metric\n",
+    "from datasets import load_dataset, load_from_disk\n",
+    "import evaluate\n",
     "import torch\n",
     "import pandas as pd\n",
     "from tqdm import tqdm"
@@ -207,7 +281,7 @@
     "\n",
     "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
     "  \n",
-    "        rouge_metric = load_metric('rouge')\n",
+    "        rouge_metric = evaluate.load('rouge')\n",
     "\n",
     "        score = self.calculate_metric_on_test_ds(\n",
     "        dataset_samsum_pt['test'][0:10], rouge_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
